--- a/source/README.rdoc
+++ b/source/README.rdoc
@@ -1,28 +1,20 @@
-== README
+# README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* Ruby version 2.5.1
 
-Things you may want to cover:
+* Rails version 4.2.11
 
-* Ruby version
+#### Instriction to run app
+###### To setup DB Run:
+* `rake db:create`
+* `rake db:migrate`
 
-* System dependencies
+###### To seed customers and charges:
+* `rake db:seed`
 
-* Configuration
+###### Run rails app using
+* `rails s`
 
-* Database creation
+###### Run Test case using
+* `rspec`
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
